# DataForge

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DataForge.spec  FileManager.spec  README.md  build_exe.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_ui.py  setup.py
.githooks/: commit-msg
.github/workflows/: ci.yml
buildspec/debug/: DataForge-debug.spec  FileManager-debug.spec
buildspec/release/: DataForge.spec  FileManager.spec
dataforge/: cli.py
dataforge/core/: __init__.py  cache.py  common.py  config.py  hasher.py  logger.py  media_ops.py  provider.py  scanner.py  utils.py
dataforge/modules/: cleaner.py  device_manager.py  forensics.py  hardware.py  metadata.py  password_tools.py  performance.py  recovery.py  renamer.py  reporting.py  search.py  system_cleanup.py  usage.py
dataforge/ui/: app.py  dialogs.py  plugin_loader.py  splash.py  theme_tokens.py  widgets.py
docs/: ARCHITECTURE.md  CLI_REFERENCE.md  COMMIT_CONVENTION.md  CONTRIBUTING.md  DEVELOPMENT_GUIDE.md  GUI_WORKFLOWS.md  RELEASE_PROCESS.md  TECHNICAL_SOURCE_OF_TRUTH.md  VERSIONING.md
docs/reviews/: 00_EXECUTIVE_SUMMARY.md  01_CODE_REVIEW_AND_BUGS.md  02_SECURITY_AND_FORENSIC_AUDIT.md  03_UIUX_REVIEW.md  04_IMPROVEMENTS_AND_ROADMAP.md  05_PRODUCT_NAMING_AND_NEXT_STEPS.md  AUDIT_FINDINGS.md  COMPLETE_BRANDING_PACKAGE.md  DATAFORGE_BRANDING_GUIDE.md  DELIVERY_SUMMARY_PRODUCT_REBRAND.md  EXECUTIVE_SUMMARY.md  FORENSIC_SECURITY_REVIEW.md  IMPLEMENTATION_PLAN.md  IMPROVEMENT_PLAN.md  LOGO_AND_BRAND_ASSETS.md  LOGO_INTEGRATION_SUMMARY.md  NOTES_REVIEW.md  PHASE1_GITHUB_UPDATES_CHECKLIST.md  QUICK_REFERENCE_DATAFORGE_REBRAND.md  SUPERPOWERS_BRANDING_COMPLETE.md  SUPERPOWERS_SUMMARY.txt
filemanager/: cli.py
tests/: test_comprehensive.py  test_contract_regressions.py  test_integration.py  test_new_modules.py  test_theme_tokens.py  verify_scenarios.py
(+66 files in other folders)
