[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dataforge"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "click",
    "rich",
    "tqdm",
    "send2trash",
    "psutil>=5.9.0",
    "python-magic>=0.4.27",
    "PyExifTool>=0.5.0",
    "mutagen>=1.47.0",
    "py-cpuinfo>=9.0.0",
]

[project.scripts]
fm = "dataforge.cli:main"

# PyQt5 and Pillow are intentionally excluded from [project.dependencies]:
# they only back the desktop GUI (run_ui.py), not the `fm` CLI console
# script. Install from requirements.txt for full GUI/media support.

[tool.setuptools.packages.find]
include = ["dataforge*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
# Default rule set (E4, E7, E9, F) plus ambiguous-name checks.
select = ["E4", "E7", "E9", "F", "E741"]
ignore = [
    "E701",  # multiple statements on one line (colon) - compact guard clauses
    "E702",  # multiple statements on one line (semicolon) - same convention
]

[tool.ruff.lint.per-file-ignores]
# Package __init__ files re-export their public API; the imports are the API.
"dataforge/core/__init__.py" = ["F401"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.mypy]
# No python_version pin: mypy's syntax parser gates PEP 695 constructs
# (e.g. numpy's bundled stubs) on this setting, but doesn't re-enforce
# older f-string grammar restrictions from it either (ruff's
# target-version covers that class of bug instead) - so pinning here
# only costs us stub compatibility for no added safety.
ignore_missing_imports = true
warn_unused_ignores = true
exclude = ["^build/", "^dist/", "^buildspec/"]

[tool.coverage.run]
source = ["dataforge"]

[tool.coverage.report]
show_missing = true
